<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/menu_posts" />

    <item
        android:id="@+id/navigation_topics"
        android:icon="@drawable/explore_selector"
        android:title="@string/menu_topics" />

    <item
        android:id="@+id/navigation_spaces"
        android:icon="@drawable/ic_graphic_eq_black_24dp"
        android:title="@string/menu_spaces" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notification_selector"
        android:title="@string/menu_notification" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_selector"
        android:title="@string/menu_chat" />

</menu>
