<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent"
    tools:context=".CreatePromotion">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/activity_margin"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:fontFamily="@font/open_sans_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lineSpacingExtra="8sp"
            android:text="@string/create_promotion"
            android:textColor="#4d4d4d"
            android:textSize="22sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:layout_below="@id/title"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:background="@color/bg_separator" />

    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_below="@id/divider"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="@dimen/dimen_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/recta"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/outline_article_24"
                android:drawablePadding="5dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:drawableTint="@color/colorPrimary"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:fontFamily="@font/open_sans_bold"
                android:id="@+id/titleTextInputEditText"
                android:hint="@string/enter_promotion_title"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/outline_article_24"
                android:drawablePadding="@dimen/padding_5"
                android:drawableTint="@color/colorPrimary"
                android:textSize="18sp"
                android:imeOptions="actionNext"
                android:inputType="textImeMultiLine|textShortMessage|textMultiLine"
                android:fontFamily="@font/open_sans_semi_bold"
                android:id="@+id/summaryTextInputEditText"
                android:hint="@string/enter_summary"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_link_black_24dp"
                android:textSize="18sp"
                android:imeOptions="actionNext"
                android:inputType="textWebEditText"
                android:fontFamily="@font/open_sans_semi_bold"
                android:id="@+id/webTextInputEditText"
                android:hint="@string/enter_link"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="@font/open_sans_bold"
                android:layout_marginTop="16dp"
                android:text="@string/select_call_to_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:layout_marginTop="8dp"
                android:id="@+id/spinner"
                android:imeOptions="actionDone"
                android:background="@drawable/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/cta" />

            <Button
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/dimen_24"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:background="@drawable/primary_background_button"
                android:textColor="@color/colorWhite"
                android:text="@string/publish"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.wang.avi.AVLoadingIndicatorView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressBar"
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_30"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator" />
</RelativeLayout>