<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shareSheetToolBar"
        android:background="@color/colorWhite">

        <TextView
            android:background="@color/colorWhite"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/options"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/dimen_8"
            android:id="@+id/reportLayout"
            android:layout_marginStart="28dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/edit_comment"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_flash_on_vd_white_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/open_sans_semi_bold"
                android:layout_margin="10dp"
                android:text="@string/report"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>