<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorMilky"
    android:id="@+id/container"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_likes"
        android:id="@+id/typeImageView"
        android:layout_width="35dp"
        android:layout_height="35dp"/>

    <RelativeLayout
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/typeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:cardCornerRadius="@dimen/padding_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/history"
                android:transitionName="qwertyuiop"
                android:src="@mipmap/icon"
                android:id="@+id/imageView"
                android:scaleType="centerCrop"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:layout_below="@id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:drawablePadding="@dimen/dimen_5"
                android:text="@string/app_name"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:maxLines="4"
                android:text="@string/foundersubtitle"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:fontFamily="@font/open_sans_regular"
                android:textColor="@color/black"
                android:id="@+id/subTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout >