<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".TopicDetail"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            app:titleEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorWhite"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/cover"
                    android:contentDescription="@string/cover_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="5:2"
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:padding="@dimen/dimen_16"
                    app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
                    app:layout_constraintStart_toEndOf="parent"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginBottom="@dimen/dimen_5"
                        android:textColor="@color/white"
                        android:text="@string/conversations"
                        android:textSize="20sp"
                        android:fontFamily="@font/open_sans_semi_bold"
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="@color/white"
                        android:text="@string/sponsored"
                        android:textSize="16sp"
                        android:fontFamily="@font/open_sans_regular"
                        android:id="@+id/subTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:subtitleTextColor="@color/colorGray"
                app:titleTextColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:layout_gravity="end|center_vertical"
                    app:srcCompat="@drawable/outline_bar_chart_24"
                    android:contentDescription="@string/testimonials"
                    android:id="@+id/dataImageView"
                    android:layout_margin="@dimen/dimen_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/colorPrimary" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_topic_detail" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>